# bgrm

./: .gitignore  AGENTS.md  CHANGELOG.md  DECISIONS.md  FUTURE.md  README.md  pyproject.toml  remove_background.py
tests/: test_remove_background.py
